--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -15,3 +15,32 @@ section:nth-child(odd) {
     font-size: 3em;
     font-weight: bold;
 }
+
+/* div class="col-md-4 form fundamental" */
+
+.fundamental .topic {
+	background-image: url(img/fundamentals-icon.png);
+}
+.topic {	
+	background-repeat: no-repeat;
+	padding-left: 30px;
+}
+.fundamental h3 {
+	color: #4d7bb4;
+}
+.senior h3 {
+	color: #ea5012;
+}
+.expert h3 {
+	color: #622d11;
+}
+.form h3 {
+	margin-bottom: 0px;
+}
+.form-label {
+	color: #939ca7;
+	margin-bottom: 10px;
+}
+.col-md-4 .form ul{
+	list-style-image: url(img/icon_li.png);
+}
