--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -5,14 +5,14 @@
 
 /* Fonts */
 body {
-    font-family: 'Arimo', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #858592;
+    font-weight: 300;
     font-size: 185%;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    color: #393531;
+    font-family: 'Arimo', sans-serif;
+    color: #5e5e5e;
 }
 
 @font-face {
@@ -53,12 +53,16 @@ nav.navbar {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
 }
+.modal p, .modal li {
+    font-size: 0.75em;
+}
 
 /* About */
 .about-container {
     padding-top: 80px;
     background: url(../img/about_bg.png) center center no-repeat #08527F;
     color: rgb(186, 183, 230);
+    font-weight: 400;
 }
 section.about-container .container {
 	background: none;
@@ -108,24 +112,28 @@ section.about-container .container {
     width: 105px;
     text-align: center;
 }
-
-/* div class="col-md-4 form fundamental" */
-
-/* .fundamental .topic {
-	background-image: url(../img/fundamentals-icon.png);
+.bottom-timer {
+    text-align: center;
 }
-.senior .topic {
-	background-image: url(../img/senior-icon.png);
-}
-.expert .topic {
-	background-image: url(../img/expert-icon.png);
-} */
+
+/* Learning forms */
 .topic {
 	background-repeat: no-repeat;
 	padding-left: 50px;
+    border-bottom: 1px solid #C2C7CE;
+}
+.details-container .topic+ul {
+    min-height: 200px;
+}
+.form .button {
+    text-align: center;
 }
 .fundamental h3 {
 	color: #4d7bb4;
+}
+.senior {
+    border: 1px solid #C2C7CE;
+    padding-bottom: 0.6em;
 }
 .senior h3 {
 	color: #ea5012;
@@ -143,8 +151,44 @@ section.about-container .container {
 .form ul li{
 	list-style-image: url(../img/icon_li.png);
 }
+.form .form-description {
+    font-size: 0.8em;
+    padding: 1em 0.1em;
+}
+.program {
+    margin-top: 1.2em;
+    border-top: 1px solid #C2C7CE;
+    padding: 1em;
+}
 
 /* Footer */
+footer {
+    border-top: 1px solid #C2C7CE;
+    padding: 1.5em;
+}
 .social {
 	text-align: center;
+}
+.social a {
+    text-decoration: none;
+    display: inline-block;
+    margin: 0 0.1em;
+    width: 3em;
+    line-height: 3em;
+    text-align: center;
+    border-radius: 50%;
+}
+.social a:hover {
+    background-color: #bebeae;
+}
+.social a>span {
+    display: none;
+}
+footer .policy-link {
+    text-align: right;
+}
+footer .policy-link a {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px dashed #C2C7CE;
 }
