--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -46,7 +46,7 @@ section:nth-child(even) .container {
 section h2 {
     padding: 0.6em 0 1.4em 0;
     text-align: center;
-    margin: 1em 4em 0.8em;
+    margin: 1em 0 0.8em;
     border-bottom: 1px solid #C2C7CE;
 }
 nav.navbar {
@@ -228,4 +228,13 @@ footer .policy-link a {
     color: inherit;
     text-decoration: none;
     border-bottom: 1px dashed #C2C7CE;
+}
+
+@media (max-width: 767px) {
+  .timer .time {
+    font-size: 4em;
+  }
+  .timer .timer-labels span {
+	width: 85px;
+  }
 }
